Fix typos with first letters S-V inside doc/

--- a/doc/locale/ja/LC_MESSAGES/news/4.po
+++ b/doc/locale/ja/LC_MESSAGES/news/4.po
@@ -49,7 +49,7 @@ msgstr "修正"
 msgid "Fixed mismatch between error code and error message when ``strerror()`` is failed. There was a case that Groonga shows incorrect error code as syscall error."
 msgstr "エラー発生時のエラーコードとエラーメッセージが ``strerror()`` を呼んで失敗したときに一致しない不具合を修正しました。このせいで、syscallエラーとして不適切なエラーコードを表示することがありました。"
 
-msgid "Fixed to show errno in error message when unknow error is occurred."
+msgid "Fixed to show errno in error message when unknown error is occurred."
 msgstr "未定義エラーが発生したときにエラーメッセージにエラーコード(errno)を表示するようにしました。"
 
 msgid "[windows] Fixed to return proper error code."
