--- a/doc/locale/ja/LC_MESSAGES/news/3.po
+++ b/doc/locale/ja/LC_MESSAGES/news/3.po
@@ -589,7 +589,7 @@ msgstr "``X += Y``, ``X -= Y``, ``X *= Y``, ``X /= Y``, ``X %= Y``, ``X <<= Y``,
 msgid "Supported unary operations such as ``-X`` for Int8, UInt8, Int16, UInt16 and UInt64."
 msgstr "``-X`` といった演算子をInt8, UInt8, Int16, UInt16 や UInt64に対してもサポートしました。"
 
-msgid "Supported complex string concatination in ``--output_columns``. For example, you can use a query such as ``--output_columns '\"<\" + title + \">\"'``."
+msgid "Supported complex string concatenation in ``--output_columns``. For example, you can use a query such as ``--output_columns '\"<\" + title + \">\"'``."
 msgstr "``--output_columns`` で複雑な文字列の連結をサポートしました。例えば ``--output_columns '\"<\" + title + \">\"'`` といったクエリを書けるようになりました。"
 
 msgid "Added the information of the repository of groonga to development page."
