--- a/doc/locale/ja/LC_MESSAGES/reference/executables/groonga-suggest-create-dataset.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/executables/groonga-suggest-create-dataset.po
@@ -27,7 +27,7 @@ msgstr ""
 msgid "SYNOPSTIS"
 msgstr ""
 
-msgid "DESCTIPION"
+msgid "DESCRIPTION"
 msgstr ""
 
 msgid "groonga-suggest-create-dataset creates a dataset for :doc:`/reference/suggest`. A database has many datasets. This command just defines schema for a suggestion dataset."
