--- a/doc/source/news/12.rst
+++ b/doc/source/news/12.rst
@@ -434,7 +434,7 @@ Improvements
   * ``GRN_SLOW_LOG_THRESHOLD`` requires specifying time in seconds as a threshold. The time of the threshold can shorter than a second with specifying decimal number.
   * A log with debug level would be output if the processing time takes longer than specifyed time with ``GRN_SLOW_LOG_THRESHOLD``.
 
-  Setting for log level would be controled with :option:`log-level <groonga --log-level>` or :doc:`/reference/commands/log_level`.
+  Setting for log level would be controlled with :option:`log-level <groonga --log-level>` or :doc:`/reference/commands/log_level`.
 
   What value to specify ``GRN_SLOW_LOG_THRESHOLD`` would depend on its environment and checking purpose.
   For an example, we can use following setting to check which records are taking longer time for ``load``.
