--- a/doc/source/news/3.rst
+++ b/doc/source/news/3.rst
@@ -443,7 +443,7 @@ Improvements
   ``X /= Y``, ``X %= Y``, ``X <<= Y``, ``X >>= Y``, ``X >>>= Y``, ``X &= Y``,
   ``X |= Y`` and ``X ^= Y`` for Int8, UInt8, Int16, UInt16 and UInt64.
 * Supported unary operations such as ``-X`` for Int8, UInt8, Int16, UInt16 and UInt64.
-* Supported complex string concatination in ``--output_columns``.
+* Supported complex string concatenation in ``--output_columns``.
   For example, you can use a query such as ``--output_columns '"<" + title + ">"'``.
 * Added the information of the repository of groonga to development page.
 * Added ``sub_filter()`` function.
