doc news: add 15.1.1 entry

--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -17,14 +17,32 @@ msgstr ""
 msgid "News - 15 series"
 msgstr "お知らせ - 15系"
 
+msgid "Release 15.1.1 - 2025-05-29"
+msgstr "15.1.1リリース - 2025-05-29"
+
+msgid "This release updates TokenMecab to preserve user-defined entries with spaces as single tokens and adds an Arch Linux package."
+msgstr "このリリースでは、TokenMecabでユーザー定義辞書に登録されたスペースを含むエントリを単一トークンとして保持できるようにする変更とArch Linuxパッケージのサポートを追加しました。"
+
+msgid "Improvements"
+msgstr "改良"
+
+msgid "{doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined words with spaces"
+msgstr "{doc}`/reference/tokenizers/token_mecab`: スペースを含むユーザー定義語の意図しないトークン分割を修正"
+
+msgid "Previously, TokenMecab internally treated MeCab’s `-Owakati` mode output as space-delimited tokens, causing user-defined dictionary entries containing spaces (e.g., \"search engine\") to be split into separate tokens like \"search\" and \"engine\". This release updates TokenMecab to use MeCab’s `-F%m\\n` newline-delimited output, ensuring that entries with embedded spaces remain as single tokens."
+msgstr "従来、TokenMecabはMeCabの`-Owakati`モードの出力をスペース区切りのトークンとして扱っていたため、ユーザー辞書にスペースを含むエントリ（例: \"search engine\"）が \"search\"と\"engine\"のように分割されてしまっていました。本リリースでは、MeCabの`-F%m`オプションを使用して改行区切りでトークンを出力し、その出力を改行区切りのトークンとして扱うように変更しました。その結果、スペースを含むエントリも単一のトークンとして扱われるようになりました。"
+
+msgid "Added support for Arch Linux package"
+msgstr "Arch Linuxパッケージをサポート"
+
+msgid "We provided the package of Arch Linux. This is provided via the Arch User Repository and delivers the latest Groonga release to Arch Linux users."
+msgstr "Arch User Repositoryを通じてArch Linux向けパッケージを提供開始しました。これにより、Arch Linuxユーザーは最新のGroongaを利用できるようになります。"
+
 msgid "Release 15.0.9 - 2025-05-08"
 msgstr "15.0.9リリース - 2025-05-08"
 
 msgid "This release adds the tokenizer's option to make token inspection simpler and improves negative-division semantics for unsigned integer."
 msgstr "このリリースでは、トークナイザのオプションを追加してトークンの確認を簡単にするとともに、符号なし整数を負の数で除算したときのセマンティクスを改善しました。"
-
-msgid "Improvements"
-msgstr "改良"
 
 msgid "{doc}`/reference/commands/tokenize`/{doc}`/reference/commands/table_tokenize`: Added {ref}`tokenize-output-style` option"
 msgstr "{doc}`/reference/commands/tokenize`/{doc}`/reference/commands/table_tokenize`: {ref}`tokenize-output-style`オプションの追加"
