--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,29 @@
 # News - 15 series
 
+(release-15-1-1)=
+
+## Release 15.1.1 - 2025-05-29
+
+This release updates TokenMecab to preserve user-defined entries with spaces as
+single tokens and adds an Arch Linux package.
+
+### Improvements
+
+#### {doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined words with spaces
+
+Previously, TokenMecab internally treated MeCab’s `-Owakati` mode output as
+space-delimited tokens, causing user-defined dictionary entries containing
+spaces (e.g., "search engine") to be split into separate tokens like "search"
+and "engine". This release updates TokenMecab to use MeCab’s `-F%m\n`
+newline-delimited output, ensuring that entries with embedded spaces remain as
+single tokens.
+
+#### Added support for Arch Linux package
+
+We provided the package of Arch Linux.
+This is provided via the Arch User Repository and delivers the latest Groonga
+release to Arch Linux users.
+
 (release-15-0-9)=
 
 ## Release 15.0.9 - 2025-05-08
