--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -14,7 +14,7 @@ single tokens and adds an Arch Linux package.
 Previously, {ref}`token-mecab` internally treated MeCab’s `-Owakati` mode
 output as space-delimited tokens, causing user-defined dictionary entries
 containing spaces (e.g., "search engine") to be split into separate tokens like
-"search" and "engine". This release updates {ref}`token-mecab` to use MeCab’s
+"search" and "engine". This release updates {ref}`token-mecab` to use MeCab's
 `-F%m\n` newline-delimited output, ensuring that entries with embedded spaces
 remain as single tokens.
 
