rewrite content to be more user-friendly

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -11,12 +11,10 @@ single tokens and adds an Arch Linux package.
 
 #### {doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined words with spaces
 
-Previously, {ref}`token-mecab` internally treated MeCab’s `-Owakati` mode
-output as space-delimited tokens, causing user-defined dictionary entries
-containing spaces (e.g., "search engine") to be split into separate tokens like
-"search" and "engine". This release updates {ref}`token-mecab` to use MeCab's
-`-F%m\n` newline-delimited output, ensuring that entries with embedded spaces
-remain as single tokens.
+Previously, {ref}`token-mecab` split user-defined dictionary entries containing
+spaces (e.g., "search engine") into separate tokens ("search" and "engine").
+This release fixes this issue, so entries with embedded spaces are now preserved
+and handled as single tokens like "search engine".
 
 (release-15-0-9)=
 
