--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -29,8 +29,8 @@ msgstr "改良"
 msgid "{doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined words with spaces"
 msgstr "{doc}`/reference/tokenizers/token_mecab`: スペースを含むユーザー定義語の意図しないトークン分割を修正"
 
-msgid "Previously, {ref}`token-mecab` internally treated MeCab’s `-Owakati` mode output as space-delimited tokens, causing user-defined dictionary entries containing spaces (e.g., \"search engine\") to be split into separate tokens like \"search\" and \"engine\". This release updates {ref}`token-mecab` to use MeCab's `-F%m\\n` newline-delimited output, ensuring that entries with embedded spaces remain as single tokens."
-msgstr "従来、{ref}`token-mecab`はMeCabの`-Owakati`モードの出力をスペース区切りのトークンとして扱っていたため、ユーザー辞書にスペースを含むエントリ（例: \"search engine\"）が \"search\"と\"engine\"のように分割されてしまっていました。本リリースでは、MeCabの`-F%m`オプションを使用して改行区切りでトークンを出力し、その出力を改行区切りのトークンとして扱うように{ref}`token-mecab`を変更しました。その結果、スペースを含むエントリも単一のトークンとして扱われるようになりました。"
+msgid "Previously, {ref}`token-mecab` split user-defined dictionary entries containing spaces (e.g., \"search engine\") into separate tokens (\"search\" and \"engine\"). This release fixes this issue, so entries with embedded spaces are now preserved and handled as single tokens like \"search engine\"."
+msgstr "従来、{ref}`token-mecab`はユーザー辞書で定義されたスペースを含むエントリ（例: \"search engine\"）を\"search\"や\"engine\"のように別々のトークンとして分割していました。本リリースではこの問題を修正し、スペースを含むエントリを\"search engine\"のように単一のトークンとしてトークナイズできるように修正しました。"
 
 msgid "Release 15.0.9 - 2025-05-08"
 msgstr "15.0.9リリース - 2025-05-08"
