--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -5,7 +5,7 @@
 ## Release 15.1.1 - 2025-05-29
 
 This release updates TokenMecab to preserve user-defined entries with spaces as
-single tokens and adds an Arch Linux package.
+single tokens.
 
 ### Improvements
 
