Address Takuya's remark

--- a/doc/locale/ja/LC_MESSAGES/server/http/comparison.po
+++ b/doc/locale/ja/LC_MESSAGES/server/http/comparison.po
@@ -112,7 +112,7 @@ msgstr ":doc:`groonga-httpd` はプレフィックスパスを変更すること
 msgid "Groonga has :doc:`/reference/command/command_version` mechanism. It is for upgrading groonga commands with backward compatibility."
 msgstr "Groongaには :doc:`/reference/command/command_version` という仕組みがあります。これは後方互換性を維持したままgroongaコマンドをアップグレードするための仕組みです。"
 
-msgid ":doc:`groonga` can change the default command veresion by ``--default-command-version`` option. Here is a sample command line to use command version 2 as the default command version::"
+msgid ":doc:`groonga` can change the default command version by ``--default-command-version`` option. Here is a sample command line to use command version 2 as the default command version::"
 msgstr ":doc:`groonga` は ``--default-command-version`` オプションでデフォルトのコマンドバージョンを変更できます。以下はデフォルトのコマンドバージョンとしてコマンドバージョン2を使うコマンドライン例です。::"
 
 msgid ":doc:`groonga-httpd` cannot custom the default command version yet. But it will be supported soon. If it is supported, you can provides different command version groonga commands in the same :doc:`groonga-httpd` process. Here is a sample configuration to provide command version 1 commands under ``/api/1/`` and command version 2 comamnds under ``/api/2/``::"
