use the same word for consistency

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -9,12 +9,12 @@ single tokens.
 
 ### Improvements
 
-#### {doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined words with spaces
+#### {doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined entries with spaces
 
-Previously, {ref}`token-mecab` split user-defined dictionary entries containing
-spaces (e.g., "search engine") into separate tokens ("search" and "engine").
-This release fixes this issue, so entries with embedded spaces are now preserved
-and handled as single tokens like "search engine".
+Previously, {ref}`token-mecab` split user-defined entries containing spaces
+(e.g., "search engine") into separate tokens ("search" and "engine"). This
+release fixes this issue, so entries with embedded spaces are now preserved and
+handled as single tokens like "search engine".
 
 (release-15-0-9)=
 
