--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -21,16 +21,16 @@ msgid "Release 15.1.1 - 2025-05-29"
 msgstr "15.1.1リリース - 2025-05-29"
 
 msgid "This release updates TokenMecab to preserve user-defined entries with spaces as single tokens."
-msgstr "このリリースでは、TokenMecabでユーザー定義辞書に登録されたスペースを含むエントリを単一トークンとして保持できるようにする変更をおこないました。"
+msgstr "このリリースでは、TokenMecabがスペースを含むユーザー定義エントリを単一トークンとして保持できるようにする変更をおこないました。"
 
 msgid "Improvements"
 msgstr "改良"
 
-msgid "{doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined words with spaces"
-msgstr "{doc}`/reference/tokenizers/token_mecab`: スペースを含むユーザー定義語の意図しないトークン分割を修正"
+msgid "{doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined entries with spaces"
+msgstr "{doc}`/reference/tokenizers/token_mecab`: スペースを含むユーザー定義エントリの意図しないトークン分割を修正"
 
-msgid "Previously, {ref}`token-mecab` split user-defined dictionary entries containing spaces (e.g., \"search engine\") into separate tokens (\"search\" and \"engine\"). This release fixes this issue, so entries with embedded spaces are now preserved and handled as single tokens like \"search engine\"."
-msgstr "従来、{ref}`token-mecab`はユーザー辞書で定義されたスペースを含むエントリ（例: \"search engine\"）を\"search\"や\"engine\"のように別々のトークンとして分割していました。本リリースではこの問題を修正し、スペースを含むエントリを\"search engine\"のように単一のトークンとしてトークナイズできるように修正しました。"
+msgid "Previously, {ref}`token-mecab` split user-defined entries containing spaces (e.g., \"search engine\") into separate tokens (\"search\" and \"engine\"). This release fixes this issue, so entries with embedded spaces are now preserved and handled as single tokens like \"search engine\"."
+msgstr "従来、{ref}`token-mecab`はスペースを含むユーザー定義エントリ（例: \"search engine\"）を\"search\"や\"engine\"のように別々のトークンとして分割していました。本リリースではこの問題を修正し、スペースを含むエントリを\"search engine\"のように単一のトークンとしてトークナイズできるように修正しました。"
 
 msgid "Release 15.0.9 - 2025-05-08"
 msgstr "15.0.9リリース - 2025-05-08"
