Fix typos with first letters S-V inside doc/ (#2338)

--- a/doc/locale/ja/LC_MESSAGES/reference/executables/groonga-suggest-create-dataset.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/executables/groonga-suggest-create-dataset.po
@@ -24,7 +24,7 @@ msgstr "名前"
 msgid "groonga-suggest-create-dataset - Defines schema for a suggestion dataset"
 msgstr ""
 
-msgid "SYNOPSTIS"
+msgid "SYNOPSIS"
 msgstr ""
 
 msgid "DESCRIPTION"
