--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -35,6 +35,17 @@ tokenize TokenMecab "search engine" --output_pretty yes
 ]
 ```
 
+### Fixes
+
+#### Fixed wide ranging typos across documentation
+
+Corrected typos through a series of PRs, each addressing words beginning with
+specific letter ranges (e.g., "A–C", "D–F" etc.).
+
+### Thanks
+
+- Vasilii Lakhin
+
 (release-15-0-9)=
 
 ## Release 15.0.9 - 2025-05-08
