--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -37,10 +37,17 @@ tokenize TokenMecab "search engine" --output_pretty yes
 
 ### Fixes
 
-#### Fixed wide ranging typos across documentation
+#### Fixed many typos in documentation
 
-Corrected typos through a series of PRs, each addressing words beginning with
-specific letter ranges (e.g., "A–C", "D–F" etc.).
+[GH-2332](https://github.com/groonga/groonga/pull/2332), 
+[GH-2333](https://github.com/groonga/groonga/pull/2333), 
+[GH-2334](https://github.com/groonga/groonga/pull/2334), 
+[GH-2335](https://github.com/groonga/groonga/pull/2335), 
+[GH-2336](https://github.com/groonga/groonga/pull/2336), 
+[GH-2337](https://github.com/groonga/groonga/pull/2337), 
+[GH-2338](https://github.com/groonga/groonga/pull/2338)
+
+Patched by Vasilii Lakhin.
 
 ### Thanks
 
