--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -48,7 +48,7 @@ msgid "Thanks"
 msgstr "感謝"
 
 msgid "Vasilii Lakhin"
-msgstr ""
+msgstr "Vasilii Lakhinさん"
 
 msgid "Release 15.0.9 - 2025-05-08"
 msgstr "15.0.9リリース - 2025-05-08"
