doc news: add 15.1.1 entry (#2346)
GitHub: GH-2351

---------

Co-authored-by: Horimoto Yasuhiro <horimoto@clear-code.com>

--- a/doc/locale/ja/LC_MESSAGES/news/15.po
+++ b/doc/locale/ja/LC_MESSAGES/news/15.po
@@ -17,14 +17,44 @@ msgstr ""
 msgid "News - 15 series"
 msgstr "お知らせ - 15系"
 
+msgid "Release 15.1.1 - 2025-06-02"
+msgstr "15.1.1リリース - 2025-06-02"
+
+msgid "This release updates TokenMecab to preserve user-defined entries with spaces as single tokens."
+msgstr "このリリースでは、TokenMecabがスペースを含むユーザー定義エントリを単一トークンとして保持できるようにする変更をおこないました。"
+
+msgid "Improvements"
+msgstr "改良"
+
+msgid "{doc}`/reference/tokenizers/token_mecab`: Fix unintended splitting of user-defined entries with spaces"
+msgstr "{doc}`/reference/tokenizers/token_mecab`: スペースを含むユーザー定義エントリの意図しないトークン分割を修正"
+
+msgid "Previously, {ref}`token-mecab` split user-defined entries containing spaces (e.g., \"search engine\") into separate tokens (\"search\" and \"engine\"). This release fixes this issue, so entries with embedded spaces are now preserved and handled as single tokens like \"search engine\" as follows."
+msgstr "従来、{ref}`token-mecab`はスペースを含むユーザー定義エントリ（例: \"search engine\"）を\"search\"や\"engine\"のように別々のトークンとして分割していました。本リリースではこの問題を修正し、スペースを含むエントリを\"search engine\"のように単一のトークンとしてトークナイズできるように修正しました。"
+
+msgid "Fixes"
+msgstr "修正"
+
+msgid "Fixed many typos in documentation"
+msgstr "ドキュメント内の複数の誤記を修正"
+
+msgid "[GH-2332](https://github.com/groonga/groonga/pull/2332), [GH-2333](https://github.com/groonga/groonga/pull/2333), [GH-2334](https://github.com/groonga/groonga/pull/2334), [GH-2335](https://github.com/groonga/groonga/pull/2335), [GH-2336](https://github.com/groonga/groonga/pull/2336), [GH-2337](https://github.com/groonga/groonga/pull/2337), [GH-2338](https://github.com/groonga/groonga/pull/2338)"
+msgstr "[GH-2332](https://github.com/groonga/groonga/pull/2332)、[GH-2333](https://github.com/groonga/groonga/pull/2333)、[GH-2334](https://github.com/groonga/groonga/pull/2334)、[GH-2335](https://github.com/groonga/groonga/pull/2335)、[GH-2336](https://github.com/groonga/groonga/pull/2336)、[GH-2337](https://github.com/groonga/groonga/pull/2337)、[GH-2338](https://github.com/groonga/groonga/pull/2338)"
+
+msgid "Patched by Vasilii Lakhin."
+msgstr "Vasilii Lakhinさんがパッチ提供。"
+
+msgid "Thanks"
+msgstr "感謝"
+
+msgid "Vasilii Lakhin"
+msgstr "Vasilii Lakhinさん"
+
 msgid "Release 15.0.9 - 2025-05-08"
 msgstr "15.0.9リリース - 2025-05-08"
 
 msgid "This release adds the tokenizer's option to make token inspection simpler and improves negative-division semantics for unsigned integer."
 msgstr "このリリースでは、トークナイザのオプションを追加してトークンの確認を簡単にするとともに、符号なし整数を負の数で除算したときのセマンティクスを改善しました。"
-
-msgid "Improvements"
-msgstr "改良"
 
 msgid "{doc}`/reference/commands/tokenize`/{doc}`/reference/commands/table_tokenize`: Added {ref}`tokenize-output-style` option"
 msgstr "{doc}`/reference/commands/tokenize`/{doc}`/reference/commands/table_tokenize`: {ref}`tokenize-output-style`オプションの追加"
@@ -76,9 +106,6 @@ msgstr "このリリースでは語彙表が{ref}`table-hash-key`の場合でも
 
 msgid "Release 15.0.2 - 2025-02-21"
 msgstr "15.0.2リリース - 2025-02-21"
-
-msgid "Fixes"
-msgstr "修正"
 
 msgid "{ref}`offline-index-construction`: Fixed a bug that options may be ignored in parallel construction"
 msgstr "{ref}`offline-index-construction`: 並列に構築するとオプションを無視することがある問題を修正"
