--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_inspect.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_inspect.po
@@ -15,9 +15,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-msgid "パラメータ"
-msgstr ""
-
 msgid "``grn_inspect``"
 msgstr ""
 
@@ -72,14 +69,5 @@ msgstr "以下はオブジェクトを調査する例です。"
 msgid "Reference"
 msgstr "リファレンス"
 
-msgid "Inspect specified target ``obj`` object. It prints inspected index values."
-msgstr "指定した ``obj`` を調査し、インデックスの値を出力します。"
-
-msgid "The context object"
-msgstr "その時点のコンテキスト。"
-
-msgid "The inspect target object."
-msgstr "対象のオブジェクト"
-
-msgid "If ``obj`` is an index column, it prints like the following::"
-msgstr "もし ``obj`` がインデックスカラムの場合、次のように表示されます::"
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
