--- a/doc/locale/ja/LC_MESSAGES/reference/tokenizers/token_delimit.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/tokenizers/token_delimit.po
@@ -84,7 +84,7 @@ msgstr "高度な使い方"
 msgid "``delimiter`` option can also specify multiple delimiters."
 msgstr "``delimiter`` オプションは、複数の区切り文字を指定することもできます。"
 
-msgid "For example, ``Hello, World`` is tokenized to ``Hello`` and ``World``. ``,`` and `` `` are delimiters in below example."
+msgid "For example, ``Hello, World`` is tokenized to ``Hello`` and ``World``. ``\",\"`` and ``\" \"`` are delimiters in below example."
 msgstr "例えば、以下のように ``Hello, World`` は、``Hello`` と ``World`` にトークナイズされます。"
 
 msgid "You can extract token in complex conditions by ``pattern`` option."
