--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,5 +1,43 @@
 # News - 15 series
 
+(release-15-1-2)=
+
+## Release 15.1.2 - 2025-07-07
+
+### Improvements
+
+#### [Windows] Drop support for building with Visual Studio 2019
+
+### Fixes
+
+#### [{ref}`query-syntax-near-phrase-search-condition`][{ref}`script-syntax-near-phrase-search-operator`][{ref}`query-syntax-near-phrase-product-search-condition`][{ref}`script-syntax-near-phrase-product-search-operator`][{ref}`query-syntax-ordered-near-phrase-search-condition`][{ref}`script-syntax-ordered-near-phrase-search-operator`]: Fixed a bug that interval between phrases calculation
+
+This problem may occurs the following conditions.
+
+* Use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below.
+
+  `*NP-1,0,12,11"abc ef"`
+
+  `*NPP-1,0,10,9"(abc bcd) (ef)"`
+
+  `*ONP-1,0,5|6 "abc defghi jklmnop"`
+
+If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
+
+Please refer to the following links about usages and syntaxes of `*NP`, `*NPP`, or `*ONPP`.
+
+* [{ref}`query-syntax-near-phrase-search-condition`]
+* [{ref}`script-syntax-near-phrase-search-operator`]
+* [{ref}`query-syntax-near-phrase-product-search-condition`]
+* [{ref}`script-syntax-near-phrase-product-search-operator`]
+* [{ref}`query-syntax-ordered-near-phrase-search-condition`]
+* [{ref}`script-syntax-ordered-near-phrase-search-operator`]
+
+If this problem occur as follows.
+
+* Groonga may return records shouldn't be a hit.
+* Groonga may don't return records that should be hit.
+
 (release-15-1-1)=
 
 ## Release 15.1.1 - 2025-06-02
