--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -10,28 +10,24 @@
 
 ### Fixes
 
-#### [{ref}`query-syntax-near-phrase-search-condition`][{ref}`script-syntax-near-phrase-search-operator`][{ref}`query-syntax-near-phrase-product-search-condition`][{ref}`script-syntax-near-phrase-product-search-operator`][{ref}`query-syntax-ordered-near-phrase-search-condition`][{ref}`script-syntax-ordered-near-phrase-search-operator`]: Fixed a bug that interval between phrases calculation
+#### [Near phrase search] Fixed a bug that interval between phrases calculation
 
-This problem may occurs the following conditions.
+This problem may occurs when we use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below.
 
-- Use `*NP`, `*NPP`, or `*ONP` with `MAX_ELEMENT_INTERVAL` as below.
-
-  `*NP-1,0,12,11"abc ef"`
-
-  `*NPP-1,0,10,9"(abc bcd) (ef)"`
-
-  `*ONP-1,0,5|6 "abc defghi jklmnop"`
+- `*NP-1,0,12,11"abc ef"`
+- `*NPP-1,0,10,9"(abc bcd) (ef)"`
+- `*ONP-1,0,5|6 "abc defghi jklmnop"`
 
 If you don't use `MAX_ELEMENT_INTERVAL`, this problem doesn't occur.
 
 Please refer to the following links about usages and syntaxes of `*NP`, `*NPP`, or `*ONPP`.
 
-- [{ref}`query-syntax-near-phrase-search-condition`]
-- [{ref}`script-syntax-near-phrase-search-operator`]
-- [{ref}`query-syntax-near-phrase-product-search-condition`]
-- [{ref}`script-syntax-near-phrase-product-search-operator`]
-- [{ref}`query-syntax-ordered-near-phrase-search-condition`]
-- [{ref}`script-syntax-ordered-near-phrase-search-operator`]
+- [`*NP` in query syntax] {ref}`query-syntax-near-phrase-search-condition`
+- [`*NP` in script syntax] {ref}`script-syntax-near-phrase-search-operator`
+- [`*NPP` in query syntax] {ref}`query-syntax-near-phrase-product-search-condition`
+- [`*NPP` in script syntax] {ref}`script-syntax-near-phrase-product-search-operator`
+- [`*ONPP` in query syntax] {ref}`query-syntax-ordered-near-phrase-search-condition`
+- [`*ONPP` in script syntax] {ref}`script-syntax-ordered-near-phrase-search-operator`
 
 If this problem occur as follows.
 
